--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.0.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   }
 }
