--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export" : "next build && next export"
+    "export": "next build && next export"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -17,11 +17,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.0",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "^18.3.0"
   }
 }
